# slideoptimizer

./: main.py  makefile  pyproject.toml
